Actions
Bug #10095
closedunchecked return value in segvn_pagelock()
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
Cast it to void.
Updated by Electric Monk over 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 2d1ec69e09f53398451f5a87e38aab2447e00818
commit 2d1ec69e09f53398451f5a87e38aab2447e00818 Author: John Levon <john.levon@joyent.com> Date: 2019-01-23T19:05:49.000Z 10095 unchecked return value in segvn_pagelock() Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions